plugins {
    id 'java'
    id 'idea'
    id 'jacoco'
    id 'org.sonarqube' version '7.2.3.7755'
    id 'org.springframework.boot' version '3.4.13'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.akdemya'
version = '1.2.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.bucket4j:bucket4j_jdk17-core:8.14.0'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'
    implementation "org.postgresql:postgresql:${postgresql_version}"

    implementation "io.jsonwebtoken:jjwt-api:${jwt_version}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwt_version}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwt_version}"

    // PDF extraction
    implementation 'org.apache.pdfbox:pdfbox:3.0.3'

    testImplementation 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.12"
}

def jacocoExclusions = [
    // External AI API adapters — require live HTTP calls, not unit-testable
    '**/infrastructure/ai/**',
    // PDF extraction — requires binary files
    '**/infrastructure/pdf/**',
    // Local file storage — filesystem integration
    '**/infrastructure/storage/**',
    // Background scheduler jobs
    '**/infrastructure/scheduler/**',
    // In-memory vector search — placeholder implementation
    '**/infrastructure/search/**',
    // Spring Security configuration and OAuth adapters
    '**/infrastructure/security/**',
    // External configuration properties (no logic)
    '**/application/config/AiProperties*',
    // Admin question controller — large legacy controller pending refactor
    '**/web/AdminQuestionController*',
    // Index/quiz generation controllers — AI pipeline, no unit tests
    '**/web/IndexSourceController*',
    '**/web/QuizGenerationController*',
    // Index document service — depends on AI pipeline
    '**/application/service/IndexDocumentService*',
    // Review question service — depends on AI pipeline
    '**/application/service/ReviewQuestionService*',
]

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, excludes: jacocoExclusions)
        }))
    }
}

jacocoTestCoverageVerification {
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, excludes: jacocoExclusions)
        }))
    }
    violationRules {
        rule {
            limit {
                minimum = 0.85
            }
        }
    }
}

sonar {
    properties {
        property "sonar.projectKey", "guilu_akadem.ia"
        property "sonar.organization", "dbhlab"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
    }
}

